//
//  User.swift
//  SwiftUI-MVVM
//
//  Created by kamikaze on 2019/10/14.
//  Copyright © 2019 example. All rights reserved.
//

import Combine

struct User {
    var id: String = ""
    var name: String = ""
}
